client is recieving jokes array

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -10,6 +10,12 @@
   </head>
   <body>
     <h1>Node Express Joke Book</h1>
-
+    <div id="jokeBook">
+    </div>
+    <div id="addJoke">
+      <input type="text" placeholder="Name" name="Name:" value="">
+      <input type="textarea" placeholder="Joke Question" name="Joke Question:" value="">
+      <input type="textarea" placeholder="Punch Line" name="Punch Line" value="">
+    </div>
   </body>
 </html>
