everything functioning properly

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -11,11 +11,14 @@
   <body>
     <h1>Node Express Joke Book</h1>
     <div id="jokeBook">
+
     </div>
     <div id="addJoke">
-      <input type="text" placeholder="Name" name="Name:" value="">
-      <input type="textarea" placeholder="Joke Question" name="Joke Question:" value="">
-      <input type="textarea" placeholder="Punch Line" name="Punch Line" value="">
+      <h1>Have a doozy of a joke to add?</h1>
+      <input id="name" type="text" placeholder="Name" name="Name:" value="">
+      <input id="joke" type="text" placeholder="Joke Question" name="Joke Question:" value="">
+      <input id="punchLine" type="text" placeholder="Punch Line" name="Punch Line:" value="">
+      <button type="button" name="button">Submit Joke</button>
     </div>
   </body>
 </html>
