--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -1,24 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
+<head>
+  <meta charset="utf-8">
 
-    <title>Node Express Joke Book</title>
-    <script src="vendor/jquery.min.js" type="text/javascript"></script>
-    <script src="scripts/client.js" type="text/javascript"></script>
+  <title>Node Express Joke Book</title>
+  <script src="vendor/jquery.min.js" type="text/javascript"></script>
+  <script src="scripts/client.js" type="text/javascript"></script>
 
-  </head>
-  <body>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+  <!-- Optional theme -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="./styles/styles.css">
+</head>
+<body>
+  <div id="header" class="page-header">
     <h1>Node Express Joke Book</h1>
-    <div id="jokeBook">
+  </div>
+  <div id="addJoke" class="container">
+    <h1>Have a doozy of a joke to add?</h1>
+    <input id="name" type="text" placeholder="Name" name="Name:" value="">
+    <input id="joke" type="text" placeholder="Joke Question" name="Joke Question:" value="">
+    <input id="punchLine" type="text" placeholder="Punch Line" name="Punch Line:" value="">
+    <button type="button" name="button">Submit Joke</button>
+  </div>
+  <div id="jokeBook" class="container">
+    <h1 id="bookheader">THE JOKE BOOK SO FAR</h1>
+  </div>
 
-    </div>
-    <div id="addJoke">
-      <h1>Have a doozy of a joke to add?</h1>
-      <input id="name" type="text" placeholder="Name" name="Name:" value="">
-      <input id="joke" type="text" placeholder="Joke Question" name="Joke Question:" value="">
-      <input id="punchLine" type="text" placeholder="Punch Line" name="Punch Line:" value="">
-      <button type="button" name="button">Submit Joke</button>
-    </div>
-  </body>
+</body>
 </html>
