--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -28,10 +28,16 @@
     </div>
   <div id="addJoke" class="col-sm-6">
     <h1>Have a doozy of a joke to add?</h1>
+    <form>
     <input id="name" type="text" placeholder="Name" name="Name:" value="">
+    <section>
     <input id="joke" type="text" placeholder="Joke Question" name="Joke Question:" value="">
+  </section>
+  <section>
     <input id="punchLine" type="text" placeholder="Punch Line" name="Punch Line:" value="">
+  </section>
     <button type="button" name="button">Submit Joke</button>
+  </form>
   </div>
 
 </div>
